# 2324_INFOM126_GROUPE_03

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  db.sqlite3  entrypoint.sh  essaiDeplot.txt  pyproject.toml  requirements.txt
.github/workflows/: djangoCI.yml
docs/: CONTRIBUTOR.md
phishing/templates/: 1.sent.nonurgent.html  1.sent.urgent.html  base.html
phishstick/: settings.py
