[tool.poetry]
name = "2324-infom126-groupe-03"
version = "0.1.0"
description = ""
authors = ["creuther01", "djedje-cyber", "ton-s"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.5.2"
dj-database-url = "0.5.0"
Django = "4.0.4"
gunicorn = "20.1.0"
sqlparse = "0.4.2"
whitenoise = "6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
