[tool.poetry]
name = "2324-infom126-groupe-03"
version = "0.2.1"
description = ""
authors = ["creuther01", "djedje-cyber", "ton-s"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.5.2"
dj-database-url = "0.5.0"
Django = "4.0.4"
gunicorn = "20.1.0"
sqlparse = "0.4.2"
whitenoise = "6.1.0"
commitizen = "^3.13.0"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
